--- a/index.html
+++ b/index.html
@@ -1,17 +1,33 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title></title>
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css"/>
+    <title>Document</title>
   </head>
   <body>
-    <div class="topnav">
-      <a class="active" href="#home">Home</a>
-      <a href="#join">Join</a>
-      <a href="#about">About</a>
-    </div>
+    <nav class="navbar">
+      <div class="logo">Hello World</div>
+      <ul class="nav-links">
+        <input type="checkbox" id="checkbox_toggle" />
+        <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+        <div class=menu>
+          <li><a href="/">Home</a></li><li class="services">
+            <a href="/">Services</a>
+            <ul class="dropdown">
+              <li><a href="/">Dropdown 1 </a></li>
+              <li><a href="/">Dropdown 2</a></li>
+              <li><a href="/">Dropdown 2</a></li>
+              <li><a href="/">Dropdown 3</a></li>
+              <li><a href="/">Dropdown 4</a></li>
+            </ul>
+          <li><a href="/">About</a></li>
+          </li>
+        </div>
+      </ul>
+    </nav>
     <div class="placeholder">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
     </div>
