Simple show/hide div with CSS

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <body>
     <nav class="navbar">
       <div class="logo">Hello World</div>
+      <div class="hoverable">Bubble bubble...
+        <div class="hiddenHover">...toil and trouble!</div>
+      </div>
       <ul class="nav-links">
         <input type="checkbox" id="checkbox_toggle" />
         <label for="checkbox_toggle" class="hamburger">&#9776;</label>
