Parallax effect, picsum photos in use for bg after pseudoclass until I develop a script to go through the images folder.

--- a/index.html
+++ b/index.html
@@ -31,26 +31,16 @@
         </div>
       </ul>
     </nav>
-    <div class="placeholder">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-    </div>
-    <div class="placeholder">
-      Ipsum
-    </div>
-    <div class="placeholder">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-    </div>
-    <div class="placeholder">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-    </div>
-    <div class="placeholder">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-    </div>
-    <div class="placeholder">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-    </div>
-    <div class="placeholder">
-      Ipsum
-    </div>
+    <main>
+      <section class="no-parallax">
+        <h1>Welcome!</h1>
+      </section>
+      <section class="parallax bg">
+        <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h1>
+      </section>
+      <section class="no-parallax">
+        <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h1>
+      </section>
+    </main>
   </body>
 </html>
