--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <label for="checkbox_toggle" class="hamburger">&#9776;</label>
         <div class=menu>
           <li><a href="/">Home</a></li><li class="services">
-            <a href="/">Services</a>
+            <a href="/">Jump To</a>
             <ul class="dropdown">
               <li><a href="/">Dropdown 1 </a></li>
               <li><a href="/">Dropdown 2</a></li>
