Added script, media query set to mobile first.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <input type="checkbox" id="checkbox_toggle" />
         <label for="checkbox_toggle" class="hamburger">&#9776;</label>
         <div class=menu>
-          <li><a href="/">Home</a></li><li class="services">
+          <li><a href="/">Home</a></li>
+          <li class="services">
             <a href="/">Jump To</a>
             <ul class="dropdown">
               <li><a href="/">Dropdown 1 </a></li>
@@ -35,12 +36,13 @@
       <section class="no-parallax">
         <h1>Welcome!</h1>
       </section>
-      <section class="parallax bg">
+      <section id="randomimg" class="parallax bg">
         <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h1>
       </section>
       <section class="no-parallax">
         <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h1>
       </section>
     </main>
+    <script src="./scripts.js"></script>
   </body>
 </html>
